[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/3d_widgets/scenes/instanced/resize_edge_widget.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/3d_widgets/scenes/instanced/rotate_plane_widget.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/3d_widgets/scenes/instanced/move_plane_widget.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/3d_widgets/scenes/instanced/resize_face_widget.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/3d_widgets/scenes/instanced/move_axis_widget.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/3d_widgets/scenes/instanced/widgets.gd" type="Script" id=6]
[ext_resource path="res://addons/3d_widgets/scenes/instanced/resize_corner_widget.tscn" type="PackedScene" id=7]

[node name="Widgets" type="Spatial"]
script = ExtResource( 6 )

[node name="Offset" type="Spatial" parent="."]

[node name="MoveAxisWidget" parent="Offset" instance=ExtResource( 5 )]

[node name="MovePlaneWidget" parent="Offset" instance=ExtResource( 3 )]
visible = false

[node name="RotatePlaneWidget" parent="Offset" instance=ExtResource( 2 )]
visible = false

[node name="ResizeFaceWidget" parent="Offset" instance=ExtResource( 4 )]
visible = false

[node name="ResizeEdgeWidget" parent="Offset" instance=ExtResource( 1 )]
visible = false

[node name="ResizeCornerWidget" parent="Offset" instance=ExtResource( 7 )]
visible = false
